--- a/styles/sass/global.scss
+++ b/styles/sass/global.scss
@@ -1,14 +1,19 @@
-
+@use 'variables';
+@use 'mixins';
+@use 'root';
+@use 'utilities';
 
 :root {
   /* LAYOUT: Container Width Sizes:  */
   --max-w: 1440px;
   --full-w: 100%;
   --screen-w: 100vw;
+
   /* TYPOGRAPHY: Font Families: */
-  --font-mono: "Cascadia Mono", "Segoe UI Mono", "Source Code Pro", monospace;
+  --font-mono: 'Cascadia Mono', 'Segoe UI Mono', 'Source Code Pro', monospace;
   --font-display: Inter, Arial, Helvetica, sans-serif;
-  --font-serif: "Source Serif Pro", serif;
+  --font-serif: 'Source Serif Pro', serif;
+
   /* TYPOGRAPHY: Font Sizes:  */
   --fz-body: 62.5%;
   --fz-sm: clamp(62.5%, 1vw + 1.5rem, 1.2rem);
@@ -18,6 +23,7 @@
   --fz-2xl: clamp(3.33rem, 4vw + 2.4rem, 4.8rem);
   --fz-3xl: clamp(4.44rem, 4.5vw + 3.2rem, 5.5rem);
   --fz-4xl: clamp(5.55rem, 5vw + 4.8rem, 6.4rem);
+
   /* COLORS BRAND: LIGHT THEME */
   --sdd-purple: #644cfc;
   --sdd-orange: #fca249;
@@ -44,6 +50,7 @@
     --sdd-white: #f7f7f7;
   }
 }
+
 /* ROOT HTML AND BODY */
 html,
 body {
@@ -70,6 +77,7 @@ body {
     color-scheme: dark;
   }
 }
+
 /* UNIVERSAL SELECTORS:  */
 *,
 *::after,
@@ -127,7 +135,7 @@ a:hover {
   justify-content: space-between;
   align-items: center;
   padding: 4rem;
-  min-height: 90vh;
+  min-height: calc(100vh - 10vh);
 }
 
 /* HOMEPAGE INDEX STYLES */
@@ -219,7 +227,7 @@ a:hover {
 
 .center::before,
 .center::after {
-  content: "";
+  content: '';
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -242,12 +250,12 @@ a:hover {
   transform: translateZ(0);
   border-radius: var(--border-radius);
   overflow: hidden;
-  box-shadow: 0px 2px 8px -1px rgba(0, 0, 0, 0.1019607843);
+  box-shadow: 0px 2px 8px -1px #0000001a;
 }
 
 .thirteen::before,
 .thirteen::after {
-  content: "";
+  content: '';
   position: absolute;
   z-index: -1;
 }
@@ -265,7 +273,11 @@ a:hover {
   inset: 0;
   padding: 1px;
   border-radius: var(--border-radius);
-  background: linear-gradient(to bottom right, rgba(var(--tile-start-rgb), 1), rgba(var(--tile-end-rgb), 1));
+  background: linear-gradient(
+    to bottom right,
+    rgba(var(--tile-start-rgb), 1),
+    rgba(var(--tile-end-rgb), 1)
+  );
   background-clip: content-box;
 }
 
@@ -275,48 +287,60 @@ a:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
   }
+
   .card:hover span {
     transform: translateX(4px);
   }
 }
+
 @media (prefers-reduced-motion) {
   .thirteen::before {
     animation: none;
   }
+
   .card:hover span {
     transform: none;
   }
 }
+
 /* Mobile */
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
   }
+
   .grid {
     grid-template-columns: 1fr;
     margin-bottom: 120px;
     max-width: 320px;
     text-align: center;
   }
+
   .card {
     padding: 1rem 2.5rem;
   }
+
   .card h2 {
     margin-bottom: 0.5rem;
   }
+
   .center {
     padding: 8rem 0 6rem;
   }
+
   .center::before {
     transform: none;
     height: 300px;
   }
+
   .description {
     font-size: 0.8rem;
   }
+
   .description a {
     padding: 1rem;
   }
+
   .description p,
   .description div {
     display: flex;
@@ -324,6 +348,7 @@ a:hover {
     position: fixed;
     width: 100%;
   }
+
   .description p {
     align-items: center;
     inset: 0 0 auto;
@@ -331,35 +356,48 @@ a:hover {
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(to bottom, rgba(var(--background-start-rgb), 1), rgba(var(--callout-rgb), 0.5));
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--background-start-rgb), 1),
+      rgba(var(--callout-rgb), 0.5)
+    );
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
+
   .description div {
     align-items: flex-end;
     pointer-events: none;
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(to bottom, transparent 0%, rgb(var(--background-end-rgb)) 40%);
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      rgb(var(--background-end-rgb)) 40%
+    );
     z-index: 1;
   }
 }
+
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
   }
 }
+
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
     filter: invert(1);
   }
+
   .logo,
   .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem rgba(255, 255, 255, 0.4392156863));
+    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
   }
 }
+
 @keyframes rotate {
   from {
     transform: rotate(360deg);
