--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
+.d-flex {
+  display: flex;
+}
 
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
 
 :root {
   /* LAYOUT: Container Width Sizes:  */
