--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,1 +1,20 @@
+// BRAND COLORS:
+//   /* LAYOUT: Container Width Sizes:  */
+//   --max-w: 1440px;
+//   --full-w: 100%;
+//   --screen-w: 100vw;
 
+//   /* TYPOGRAPHY: Font Families: */
+//   --font-mono: 'Cascadia Mono', 'Segoe UI Mono', 'Source Code Pro', monospace;
+//   --font-display: Inter, Arial, Helvetica, sans-serif;
+//   --font-serif: 'Source Serif Pro', serif;
+
+//   /* TYPOGRAPHY: Font Sizes:  */
+//   --fz-body: 62.5%;
+//   --fz-sm: clamp(62.5%, 1vw + 1.5rem, 1.2rem);
+//   --fz-md: clamp(62.5%, 1vw + 1.5rem, 1.44rem);
+//   --fz-lg: clamp(1.4rem, 0.75vw + 1.4rem, 1.6rem);
+//   --fz-xl: clamp(2.44rem, 3vw + 1.75rem, 3.2rem);
+//   --fz-2xl: clamp(3.33rem, 4vw + 2.4rem, 4.8rem);
+//   --fz-3xl: clamp(4.44rem, 4.5vw + 3.2rem, 5.5rem);
+//   --fz-4xl: clamp(5.55rem, 5vw + 4.8rem, 6.4rem);
