--- a/styles/sass/_utilities.scss
+++ b/styles/sass/_utilities.scss
@@ -1,8 +1,335 @@
-.d-flex {
+.main {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem;
+  min-height: calc(100vh - 10vh);
 }
 
-.flex-center {
+.description {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  font-size: var(--fz-sm);
+  max-width: var(--max-w);
+  width: var(--full-w);
+  z-index: 2;
+  font-family: var(--font-mono);
+}
+
+.description p {
+  position: relative;
+  margin: inherit;
+  padding: 1rem;
+  border: 2px solid var(--ssd-gray-100);
+  border-radius: 8px;
+}
+
+.code {
+  font-weight: 700;
+  font-family: var(--font-mono);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, auto));
+  justify-items: center;
+  width: var(--max-w);
+  max-width: var(--full-w);
+  gap: 2rem;
+}
+
+.card {
+  box-sizing: border-box;
+  padding: 2rem;
+  border-radius: 8px;
+  font-size: var(--fz-lg);
+  background-color: transparent;
+  transition: background-color, border, 250ms ease-in-out;
+}
+
+.grid .card:hover {
+  transition: border 500ms ease-in-out;
+  outline: 1px solid var(--sdd-gray-100);
+}
+
+.card span {
+  display: inline-block;
+  transition: transform 200ms;
+}
+
+.card h2 {
+  margin-bottom: 1rem;
+}
+
+.card p {
+  color: var(--sdd-gray-200);
+  font-size: var(--fz-md);
+  line-height: 1.44;
+  max-width: 35ch;
+}
+
+.center {
+  display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding: 4rem 0;
+}
+
+.center::before {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 480px;
+  height: 360px;
+  margin-left: -400px;
+}
+
+.center::after {
+  background: var(--primary-glow);
+  width: 240px;
+  height: 180px;
+  z-index: -1;
+}
+
+.center::before,
+.center::after {
+  content: '';
+  left: 50%;
+  position: absolute;
+  filter: blur(45px);
+  transform: translateZ(0);
+}
+
+.logo,
+.thirteen {
+  position: relative;
+}
+
+.thirteen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75px;
+  height: 75px;
+  padding: 25px 10px;
+  margin-left: 16px;
+  transform: translateZ(0);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  box-shadow: 0px 2px 8px -1px #0000001a;
+}
+
+.thirteen::before,
+.thirteen::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+}
+
+/* Conic Gradient Animation */
+.thirteen::before {
+  animation: 6s rotate linear infinite;
+  width: 200%;
+  height: 200%;
+  background: var(--tile-border);
+}
+
+/* Inner Square */
+.thirteen::after {
+  inset: 0;
+  padding: 1px;
+  border-radius: var(--border-radius);
+  background: linear-gradient(
+    to bottom right,
+    rgba(var(--tile-start-rgb), 1),
+    rgba(var(--tile-end-rgb), 1)
+  );
+  background-clip: content-box;
+}
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+  .card:hover {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  }
+
+  .card:hover span {
+    transform: translateX(4px);
+  }
+}
+
+@media (prefers-reduced-motion) {
+  .thirteen::before {
+    animation: none;
+  }
+
+  .card:hover span {
+    transform: none;
+  }
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+  .content {
+    padding: 4rem;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 120px;
+    max-width: 320px;
+    text-align: center;
+  }
+
+  .card {
+    padding: 1rem 2.5rem;
+  }
+
+  .card h2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .center {
+    padding: 8rem 0 6rem;
+  }
+
+  .center::before {
+    transform: none;
+    height: 300px;
+  }
+
+  .description {
+    font-size: 0.8rem;
+  }
+
+  .description a {
+    padding: 1rem;
+  }
+
+  .description p,
+  .description div {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+  }
+
+  .description p {
+    align-items: center;
+    inset: 0 0 auto;
+    padding: 2rem 1rem 1.4rem;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--background-start-rgb), 1),
+      rgba(var(--callout-rgb), 0.5)
+    );
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+  }
+
+  .description div {
+    align-items: flex-end;
+    pointer-events: none;
+    inset: auto 0 0;
+    padding: 2rem;
+    height: 200px;
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      rgb(var(--background-end-rgb)) 40%
+    );
+    z-index: 1;
+  }
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+  .grid {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .vercelLogo {
+    filter: invert(1);
+  }
+
+  .logo,
+  .thirteen img {
+    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+// COLORS CLASSES:
+$theme-brand-colors: (
+  'purple': #644cfc,
+  'orange': #fca249,
+  'pink': #ff9398,
+  'black': #121212,
+  'white': #f7f7f7,
+  'gray-400': #242424,
+  'gray-300': #4b4f58,
+  'gray-200': #9ca0ab,
+  'gray-100': #d3d5d9,
+);
+
+@each $color, $value in $theme-brand-colors {
+  .bg-#{$color} {
+    background-color: $value;
+  }
+
+  .hover\:bg-#{$color} {
+    &:hover {
+      background-color: $value;
+    }
+  }
+
+  .hover-l\:bg-#{$color} {
+    &:hover {
+      background-color: lighten($value, 10%);
+    }
+  }
+
+  .hover-d\:bg-#{$color} {
+    &:hover {
+      background-color: darken($value, 10%);
+    }
+  }
+
+  .text-#{$color} {
+    color: $value;
+  }
+
+  .hover\:text-#{$color} {
+    &:hover {
+      color: $value;
+    }
+  }
+
+  .hover-l\:text-#{$color} {
+    &:hover {
+      color: lighten($value, 16%);
+    }
+  }
+
+  .hover-d\:text-#{$color} {
+    &:hover {
+      color: darken($value, 16%);
+    }
+  }
 }
