--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,8 +1,533 @@
-.d-flex {
+.main {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem;
+  min-height: 90vh;
 }
 
-.flex-center {
+.description {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  font-size: var(--fz-sm);
+  max-width: var(--max-w);
+  width: var(--full-w);
+  z-index: 2;
+  font-family: var(--font-mono);
+}
+
+.description p {
+  position: relative;
+  margin: inherit;
+  padding: 1rem;
+  border: 2px solid var(--ssd-gray-100);
+  border-radius: 8px;
+}
+
+.code {
+  font-weight: 700;
+  font-family: var(--font-mono);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, auto));
+  justify-items: center;
+  width: var(--max-w);
+  max-width: var(--full-w);
+  gap: 2rem;
+}
+
+.card {
+  box-sizing: border-box;
+  padding: 2rem;
+  border-radius: 8px;
+  font-size: var(--fz-lg);
+  background-color: transparent;
+  transition: background-color, border, 250ms ease-in-out;
+}
+
+.grid .card:hover {
+  transition: border 500ms ease-in-out;
+  outline: 1px solid var(--sdd-gray-100);
+}
+
+.card span {
+  display: inline-block;
+  transition: transform 200ms;
+}
+
+.card h2 {
+  margin-bottom: 1rem;
+}
+
+.card p {
+  color: var(--sdd-gray-200);
+  font-size: var(--fz-md);
+  line-height: 1.44;
+  max-width: 35ch;
+}
+
+.center {
+  display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding: 4rem 0;
+}
+
+.center::before {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 480px;
+  height: 360px;
+  margin-left: -400px;
+}
+
+.center::after {
+  background: var(--primary-glow);
+  width: 240px;
+  height: 180px;
+  z-index: -1;
+}
+
+.center::before,
+.center::after {
+  content: "";
+  left: 50%;
+  position: absolute;
+  filter: blur(45px);
+  transform: translateZ(0);
+}
+
+.logo,
+.thirteen {
+  position: relative;
+}
+
+.thirteen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75px;
+  height: 75px;
+  padding: 25px 10px;
+  margin-left: 16px;
+  transform: translateZ(0);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  box-shadow: 0px 2px 8px -1px rgba(0, 0, 0, 0.1019607843);
+}
+
+.thirteen::before,
+.thirteen::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+/* Conic Gradient Animation */
+.thirteen::before {
+  animation: 6s rotate linear infinite;
+  width: 200%;
+  height: 200%;
+  background: var(--tile-border);
+}
+
+/* Inner Square */
+.thirteen::after {
+  inset: 0;
+  padding: 1px;
+  border-radius: var(--border-radius);
+  background: linear-gradient(to bottom right, rgba(var(--tile-start-rgb), 1), rgba(var(--tile-end-rgb), 1));
+  background-clip: content-box;
+}
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+  .card:hover {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  }
+  .card:hover span {
+    transform: translateX(4px);
+  }
+}
+@media (prefers-reduced-motion) {
+  .thirteen::before {
+    animation: none;
+  }
+  .card:hover span {
+    transform: none;
+  }
+}
+/* Mobile */
+@media (max-width: 700px) {
+  .content {
+    padding: 4rem;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 120px;
+    max-width: 320px;
+    text-align: center;
+  }
+  .card {
+    padding: 1rem 2.5rem;
+  }
+  .card h2 {
+    margin-bottom: 0.5rem;
+  }
+  .center {
+    padding: 8rem 0 6rem;
+  }
+  .center::before {
+    transform: none;
+    height: 300px;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+  .description a {
+    padding: 1rem;
+  }
+  .description p,
+  .description div {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+  }
+  .description p {
+    align-items: center;
+    inset: 0 0 auto;
+    padding: 2rem 1rem 1.4rem;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
+    background: linear-gradient(to bottom, rgba(var(--background-start-rgb), 1), rgba(var(--callout-rgb), 0.5));
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+  }
+  .description div {
+    align-items: flex-end;
+    pointer-events: none;
+    inset: auto 0 0;
+    padding: 2rem;
+    height: 200px;
+    background: linear-gradient(to bottom, transparent 0%, rgb(var(--background-end-rgb)) 40%);
+    z-index: 1;
+  }
+}
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+  .grid {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .vercelLogo {
+    filter: invert(1);
+  }
+  .logo,
+  .thirteen img {
+    filter: invert(1) drop-shadow(0 0 0.3rem rgba(255, 255, 255, 0.4392156863));
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+.bg-purple {
+  background-color: #644cfc;
+}
+
+.hover\:bg-purple:hover {
+  background-color: #644cfc;
+}
+
+.hover-l\:bg-purple:hover {
+  background-color: #8f7efd;
+}
+
+.hover-d\:bg-purple:hover {
+  background-color: #391afb;
+}
+
+.text-purple {
+  color: #644cfc;
+}
+
+.hover\:text-purple:hover {
+  color: #644cfc;
+}
+
+.hover-l\:text-purple:hover {
+  color: #a99cfd;
+}
+
+.hover-d\:text-purple:hover {
+  color: #2504f2;
+}
+
+.bg-orange {
+  background-color: #fca249;
+}
+
+.hover\:bg-orange:hover {
+  background-color: #fca249;
+}
+
+.hover-l\:bg-orange:hover {
+  background-color: #fdbc7b;
+}
+
+.hover-d\:bg-orange:hover {
+  background-color: #fb8817;
+}
+
+.text-orange {
+  color: #fca249;
+}
+
+.hover\:text-orange:hover {
+  color: #fca249;
+}
+
+.hover-l\:text-orange:hover {
+  color: #fdcb99;
+}
+
+.hover-d\:text-orange:hover {
+  color: #ef7904;
+}
+
+.bg-pink {
+  background-color: #ff9398;
+}
+
+.hover\:bg-pink:hover {
+  background-color: #ff9398;
+}
+
+.hover-l\:bg-pink:hover {
+  background-color: #ffc6c9;
+}
+
+.hover-d\:bg-pink:hover {
+  background-color: #ff6067;
+}
+
+.text-pink {
+  color: #ff9398;
+}
+
+.hover\:text-pink:hover {
+  color: #ff9398;
+}
+
+.hover-l\:text-pink:hover {
+  color: #ffe5e6;
+}
+
+.hover-d\:text-pink:hover {
+  color: #ff414a;
+}
+
+.bg-black {
+  background-color: #121212;
+}
+
+.hover\:bg-black:hover {
+  background-color: #121212;
+}
+
+.hover-l\:bg-black:hover {
+  background-color: #2c2c2c;
+}
+
+.hover-d\:bg-black:hover {
+  background-color: black;
+}
+
+.text-black {
+  color: #121212;
+}
+
+.hover\:text-black:hover {
+  color: #121212;
+}
+
+.hover-l\:text-black:hover {
+  color: #3b3b3b;
+}
+
+.hover-d\:text-black:hover {
+  color: black;
+}
+
+.bg-white {
+  background-color: #f7f7f7;
+}
+
+.hover\:bg-white:hover {
+  background-color: #f7f7f7;
+}
+
+.hover-l\:bg-white:hover {
+  background-color: white;
+}
+
+.hover-d\:bg-white:hover {
+  background-color: #dedede;
+}
+
+.text-white {
+  color: #f7f7f7;
+}
+
+.hover\:text-white:hover {
+  color: #f7f7f7;
+}
+
+.hover-l\:text-white:hover {
+  color: white;
+}
+
+.hover-d\:text-white:hover {
+  color: #cecece;
+}
+
+.bg-gray-400 {
+  background-color: #242424;
+}
+
+.hover\:bg-gray-400:hover {
+  background-color: #242424;
+}
+
+.hover-l\:bg-gray-400:hover {
+  background-color: #3e3e3e;
+}
+
+.hover-d\:bg-gray-400:hover {
+  background-color: #0b0b0b;
+}
+
+.text-gray-400 {
+  color: #242424;
+}
+
+.hover\:text-gray-400:hover {
+  color: #242424;
+}
+
+.hover-l\:text-gray-400:hover {
+  color: #4d4d4d;
+}
+
+.hover-d\:text-gray-400:hover {
+  color: black;
+}
+
+.bg-gray-300 {
+  background-color: #4b4f58;
+}
+
+.hover\:bg-gray-300:hover {
+  background-color: #4b4f58;
+}
+
+.hover-l\:bg-gray-300:hover {
+  background-color: #626874;
+}
+
+.hover-d\:bg-gray-300:hover {
+  background-color: #34363c;
+}
+
+.text-gray-300 {
+  color: #4b4f58;
+}
+
+.hover\:text-gray-300:hover {
+  color: #4b4f58;
+}
+
+.hover-l\:text-gray-300:hover {
+  color: #717784;
+}
+
+.hover-d\:text-gray-300:hover {
+  color: #25272c;
+}
+
+.bg-gray-200 {
+  background-color: #9ca0ab;
+}
+
+.hover\:bg-gray-200:hover {
+  background-color: #9ca0ab;
+}
+
+.hover-l\:bg-gray-200:hover {
+  background-color: #b8bac2;
+}
+
+.hover-d\:bg-gray-200:hover {
+  background-color: #808694;
+}
+
+.text-gray-200 {
+  color: #9ca0ab;
+}
+
+.hover\:text-gray-200:hover {
+  color: #9ca0ab;
+}
+
+.hover-l\:text-gray-200:hover {
+  color: #c8cad0;
+}
+
+.hover-d\:text-gray-200:hover {
+  color: #717685;
+}
+
+.bg-gray-100 {
+  background-color: #d3d5d9;
+}
+
+.hover\:bg-gray-100:hover {
+  background-color: #d3d5d9;
+}
+
+.hover-l\:bg-gray-100:hover {
+  background-color: #eeeff1;
+}
+
+.hover-d\:bg-gray-100:hover {
+  background-color: #b8bbc1;
+}
+
+.text-gray-100 {
+  color: #d3d5d9;
+}
+
+.hover\:text-gray-100:hover {
+  color: #d3d5d9;
+}
+
+.hover-l\:text-gray-100:hover {
+  color: white;
+}
+
+.hover-d\:text-gray-100:hover {
+  color: #a7abb3;
 }
