--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -253,11 +253,11 @@
 }
 
 .hover-l\:bg-purple:hover {
-  background-color: #8f7efd;
+  background-color: #ccc4fe;
 }
 
 .hover-d\:bg-purple:hover {
-  background-color: #391afb;
+  background-color: #2504f2;
 }
 
 .text-purple {
@@ -269,7 +269,7 @@
 }
 
 .hover-l\:text-purple:hover {
-  color: #a99cfd;
+  color: #ccc4fe;
 }
 
 .hover-d\:text-purple:hover {
@@ -285,11 +285,11 @@
 }
 
 .hover-l\:bg-orange:hover {
-  background-color: #fdbc7b;
+  background-color: #fee0c1;
 }
 
 .hover-d\:bg-orange:hover {
-  background-color: #fb8817;
+  background-color: #ef7904;
 }
 
 .text-orange {
@@ -301,7 +301,7 @@
 }
 
 .hover-l\:text-orange:hover {
-  color: #fdcb99;
+  color: #fee0c1;
 }
 
 .hover-d\:text-orange:hover {
@@ -317,11 +317,11 @@
 }
 
 .hover-l\:bg-pink:hover {
-  background-color: #ffc6c9;
+  background-color: white;
 }
 
 .hover-d\:bg-pink:hover {
-  background-color: #ff6067;
+  background-color: #ff414a;
 }
 
 .text-pink {
@@ -333,7 +333,7 @@
 }
 
 .hover-l\:text-pink:hover {
-  color: #ffe5e6;
+  color: white;
 }
 
 .hover-d\:text-pink:hover {
@@ -349,7 +349,7 @@
 }
 
 .hover-l\:bg-black:hover {
-  background-color: #2c2c2c;
+  background-color: #4f4f4f;
 }
 
 .hover-d\:bg-black:hover {
@@ -365,7 +365,7 @@
 }
 
 .hover-l\:text-black:hover {
-  color: #3b3b3b;
+  color: #4f4f4f;
 }
 
 .hover-d\:text-black:hover {
@@ -385,7 +385,7 @@
 }
 
 .hover-d\:bg-white:hover {
-  background-color: #dedede;
+  background-color: #cecece;
 }
 
 .text-white {
@@ -413,11 +413,11 @@
 }
 
 .hover-l\:bg-gray-400:hover {
-  background-color: #3e3e3e;
+  background-color: #616161;
 }
 
 .hover-d\:bg-gray-400:hover {
-  background-color: #0b0b0b;
+  background-color: black;
 }
 
 .text-gray-400 {
@@ -429,7 +429,7 @@
 }
 
 .hover-l\:text-gray-400:hover {
-  color: #4d4d4d;
+  color: #616161;
 }
 
 .hover-d\:text-gray-400:hover {
@@ -445,11 +445,11 @@
 }
 
 .hover-l\:bg-gray-300:hover {
-  background-color: #626874;
+  background-color: #868b98;
 }
 
 .hover-d\:bg-gray-300:hover {
-  background-color: #34363c;
+  background-color: #25272c;
 }
 
 .text-gray-300 {
@@ -461,7 +461,7 @@
 }
 
 .hover-l\:text-gray-300:hover {
-  color: #717784;
+  color: #868b98;
 }
 
 .hover-d\:text-gray-300:hover {
@@ -477,11 +477,11 @@
 }
 
 .hover-l\:bg-gray-200:hover {
-  background-color: #b8bac2;
+  background-color: #dee0e3;
 }
 
 .hover-d\:bg-gray-200:hover {
-  background-color: #808694;
+  background-color: #717685;
 }
 
 .text-gray-200 {
@@ -493,7 +493,7 @@
 }
 
 .hover-l\:text-gray-200:hover {
-  color: #c8cad0;
+  color: #dee0e3;
 }
 
 .hover-d\:text-gray-200:hover {
@@ -509,11 +509,11 @@
 }
 
 .hover-l\:bg-gray-100:hover {
-  background-color: #eeeff1;
+  background-color: white;
 }
 
 .hover-d\:bg-gray-100:hover {
-  background-color: #b8bbc1;
+  background-color: #a7abb3;
 }
 
 .text-gray-100 {
@@ -530,4 +530,36 @@
 
 .hover-d\:text-gray-100:hover {
   color: #a7abb3;
+}
+
+.font-display {
+  font-family: "Inter", "Helvetica", "Arial", sans-serif;
+}
+
+.font-code {
+  font-family: "Inconsolata", "Courier New", monospace;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-900 {
+  font-weight: 900;
 }
