--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700;900&family=Inter:wght@400;600;800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,8 +9,8 @@
   --full-w: 100%;
   --screen-w: 100vw;
   /* TYPOGRAPHY: Font Families: */
-  --font-mono: "Cascadia Mono", "Segoe UI Mono", "Source Code Pro", monospace;
-  --font-display: Inter, Arial, Helvetica, sans-serif;
+  --font-code: "Inconsolata", "Courier New", monospace;
+  --font-display: "Inter", "Helvetica", "Arial", sans-serif;
   --font-serif: "Source Serif Pro", serif;
   /* TYPOGRAPHY: Font Sizes:  */
   --fz-body: 62.5%;
@@ -56,6 +57,7 @@ body {
   box-sizing: border-box;
   color-scheme: light;
   font-family: var(--font-display);
+  font-variant-ligatures: normal;
   font-size: var(--fz-body);
   font-weight: 400;
   line-height: 2.4rem;
@@ -377,11 +379,11 @@ a:hover {
 }
 
 .hover-l\:bg-purple:hover {
-  background-color: #8f7efd;
+  background-color: #ccc4fe;
 }
 
 .hover-d\:bg-purple:hover {
-  background-color: #391afb;
+  background-color: #2504f2;
 }
 
 .text-purple {
@@ -393,7 +395,7 @@ a:hover {
 }
 
 .hover-l\:text-purple:hover {
-  color: #a99cfd;
+  color: #ccc4fe;
 }
 
 .hover-d\:text-purple:hover {
@@ -409,11 +411,11 @@ a:hover {
 }
 
 .hover-l\:bg-orange:hover {
-  background-color: #fdbc7b;
+  background-color: #fee0c1;
 }
 
 .hover-d\:bg-orange:hover {
-  background-color: #fb8817;
+  background-color: #ef7904;
 }
 
 .text-orange {
@@ -425,7 +427,7 @@ a:hover {
 }
 
 .hover-l\:text-orange:hover {
-  color: #fdcb99;
+  color: #fee0c1;
 }
 
 .hover-d\:text-orange:hover {
@@ -441,11 +443,11 @@ a:hover {
 }
 
 .hover-l\:bg-pink:hover {
-  background-color: #ffc6c9;
+  background-color: white;
 }
 
 .hover-d\:bg-pink:hover {
-  background-color: #ff6067;
+  background-color: #ff414a;
 }
 
 .text-pink {
@@ -457,7 +459,7 @@ a:hover {
 }
 
 .hover-l\:text-pink:hover {
-  color: #ffe5e6;
+  color: white;
 }
 
 .hover-d\:text-pink:hover {
@@ -473,7 +475,7 @@ a:hover {
 }
 
 .hover-l\:bg-black:hover {
-  background-color: #2c2c2c;
+  background-color: #4f4f4f;
 }
 
 .hover-d\:bg-black:hover {
@@ -489,7 +491,7 @@ a:hover {
 }
 
 .hover-l\:text-black:hover {
-  color: #3b3b3b;
+  color: #4f4f4f;
 }
 
 .hover-d\:text-black:hover {
@@ -509,7 +511,7 @@ a:hover {
 }
 
 .hover-d\:bg-white:hover {
-  background-color: #dedede;
+  background-color: #cecece;
 }
 
 .text-white {
@@ -537,11 +539,11 @@ a:hover {
 }
 
 .hover-l\:bg-gray-400:hover {
-  background-color: #3e3e3e;
+  background-color: #616161;
 }
 
 .hover-d\:bg-gray-400:hover {
-  background-color: #0b0b0b;
+  background-color: black;
 }
 
 .text-gray-400 {
@@ -553,7 +555,7 @@ a:hover {
 }
 
 .hover-l\:text-gray-400:hover {
-  color: #4d4d4d;
+  color: #616161;
 }
 
 .hover-d\:text-gray-400:hover {
@@ -569,11 +571,11 @@ a:hover {
 }
 
 .hover-l\:bg-gray-300:hover {
-  background-color: #626874;
+  background-color: #868b98;
 }
 
 .hover-d\:bg-gray-300:hover {
-  background-color: #34363c;
+  background-color: #25272c;
 }
 
 .text-gray-300 {
@@ -585,7 +587,7 @@ a:hover {
 }
 
 .hover-l\:text-gray-300:hover {
-  color: #717784;
+  color: #868b98;
 }
 
 .hover-d\:text-gray-300:hover {
@@ -601,11 +603,11 @@ a:hover {
 }
 
 .hover-l\:bg-gray-200:hover {
-  background-color: #b8bac2;
+  background-color: #dee0e3;
 }
 
 .hover-d\:bg-gray-200:hover {
-  background-color: #808694;
+  background-color: #717685;
 }
 
 .text-gray-200 {
@@ -617,7 +619,7 @@ a:hover {
 }
 
 .hover-l\:text-gray-200:hover {
-  color: #c8cad0;
+  color: #dee0e3;
 }
 
 .hover-d\:text-gray-200:hover {
@@ -633,11 +635,11 @@ a:hover {
 }
 
 .hover-l\:bg-gray-100:hover {
-  background-color: #eeeff1;
+  background-color: white;
 }
 
 .hover-d\:bg-gray-100:hover {
-  background-color: #b8bbc1;
+  background-color: #a7abb3;
 }
 
 .text-gray-100 {
@@ -654,4 +656,36 @@ a:hover {
 
 .hover-d\:text-gray-100:hover {
   color: #a7abb3;
+}
+
+.font-display {
+  font-family: "Inter", "Helvetica", "Arial", sans-serif;
+}
+
+.font-code {
+  font-family: "Inconsolata", "Courier New", monospace;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-900 {
+  font-weight: 900;
 }
