Changes data cards, styles and index.tsx content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,9 @@
   --full-w: 100%;
   --screen-w: 100vw;
   /* TYPOGRAPHY: Font Families: */
-  --font-code: "Inconsolata", "Courier New", monospace;
   --font-display: "Inter", "Helvetica", "Arial", sans-serif;
   --font-serif: "Source Serif Pro", serif;
+  --font-code: "Inconsolata", "Courier New", monospace;
   /* TYPOGRAPHY: Font Sizes:  */
   --fz-body: 62.5%;
   --fz-sm: clamp(62.5%, 1vw + 1.5rem, 1.2rem);
@@ -48,8 +48,7 @@
   }
 }
 /* ROOT HTML AND BODY */
-html,
-body {
+html, body {
   -moz-osx-font-smoothing: grayscale;
   -ms-text-size-adjust: var(--full-w);
   -webkit-font-smoothing: antialiased;
@@ -70,7 +69,7 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
+  html, body {
     color-scheme: dark;
   }
 }
@@ -82,6 +81,7 @@ body {
 }
 
 body {
+  font-family: var(--font-display);
   padding: 4rem;
   font-size: var(--fz-md);
   min-height: 100vh;
